@@ -2,6 +2,7 @@ package br.com.frontend.view.custo;
 
 import br.com.frontend.dto.CustoRequest;
 import br.com.frontend.dto.CustoResponse;
+import br.com.frontend.dto.ProdutoResponse;
 import jakarta.annotation.PostConstruct;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
@@ -12,6 +13,7 @@ import javax.swing.text.MaskFormatter;
 import java.awt.*;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -20,10 +22,14 @@ public class TelaCustoCrud extends JPanel {
 
     private final RestTemplate restTemplate = new RestTemplate();
     private final String API_URL = "http://localhost:8080/api/v1/custos";
+    private final String API_PRODUTOS = "http://localhost:8080/api/v1/produtos";
     private final SimpleDateFormat dateFormat = new SimpleDateFormat("dd/MM/yyyy");
 
     private JTable table;
     private DefaultTableModel tableModel;
+
+
+    private JComboBox<ProdutoResponse> cbProduto;
 
     private JTextField txtImposto;
     private JTextField txtCustoVariavel;
@@ -39,19 +45,12 @@ public class TelaCustoCrud extends JPanel {
         setLayout(new BorderLayout(10, 10));
         setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
 
-        // ====== Tabela ======
-        String[] colunas = {"ID", "Imposto", "Custo Variável", "Custo Fixo", "Margem Lucro", "Data Processamento"};
+
+        String[] colunas = {"ID", "Produto", "Imposto", "Custo Variável", "Custo Fixo", "Margem Lucro", "Data Processamento"};
         tableModel = new DefaultTableModel(colunas, 0) {
             @Override
             public boolean isCellEditable(int row, int column) {
                 return false;
-            }
-
-            @Override
-            public Class<?> getColumnClass(int columnIndex) {
-                if (columnIndex == 0) return Long.class;
-                if (columnIndex >= 1 && columnIndex <= 4) return Double.class;
-                return String.class;
             }
         };
 
@@ -59,7 +58,7 @@ public class TelaCustoCrud extends JPanel {
         table.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
         table.setRowHeight(25);
 
-        // Esconde a coluna ID
+
         table.getColumnModel().getColumn(0).setMinWidth(0);
         table.getColumnModel().getColumn(0).setMaxWidth(0);
         table.getColumnModel().getColumn(0).setWidth(0);
@@ -68,12 +67,26 @@ public class TelaCustoCrud extends JPanel {
         scrollPane.setBorder(BorderFactory.createTitledBorder("Lista de Custos"));
         add(scrollPane, BorderLayout.CENTER);
 
-        // ====== Formulário ======
+
         JPanel formPanel = new JPanel(new GridBagLayout());
         formPanel.setBorder(BorderFactory.createTitledBorder("Dados do Custo"));
         GridBagConstraints gbc = new GridBagConstraints();
         gbc.insets = new Insets(5, 5, 5, 5);
         gbc.fill = GridBagConstraints.HORIZONTAL;
+
+
+        cbProduto = new JComboBox<>();
+        cbProduto.setRenderer(new DefaultListCellRenderer() {
+            @Override
+            public java.awt.Component getListCellRendererComponent(JList<?> list, Object value,
+                                                                   int index, boolean isSelected, boolean cellHasFocus) {
+                super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
+                if (value instanceof ProdutoResponse) {
+                    setText(((ProdutoResponse) value).nome());
+                }
+                return this;
+            }
+        });
 
         txtImposto = new JTextField(20);
         txtCustoVariavel = new JTextField(20);
@@ -88,61 +101,73 @@ public class TelaCustoCrud extends JPanel {
             txtDataProcessamento = new JFormattedTextField();
         }
 
-        // Linha 0: Imposto
-        gbc.gridx = 0; gbc.gridy = 0;
+        int row = 0;
+
+
+        gbc.gridx = 0; gbc.gridy = row;
+        formPanel.add(new JLabel("Produto:"), gbc);
+        gbc.gridx = 1;
+        formPanel.add(cbProduto, gbc);
+        row++;
+
+
+        gbc.gridx = 0; gbc.gridy = row;
         formPanel.add(new JLabel("Imposto (%):"), gbc);
         gbc.gridx = 1;
         formPanel.add(txtImposto, gbc);
+        row++;
 
-        // Linha 1: Custo Variável
-        gbc.gridx = 0; gbc.gridy = 1;
+
+        gbc.gridx = 0; gbc.gridy = row;
         formPanel.add(new JLabel("Custo Variável (R$):"), gbc);
         gbc.gridx = 1;
         formPanel.add(txtCustoVariavel, gbc);
+        row++;
 
-        // Linha 2: Custo Fixo
-        gbc.gridx = 0; gbc.gridy = 2;
+
+        gbc.gridx = 0; gbc.gridy = row;
         formPanel.add(new JLabel("Custo Fixo (R$):"), gbc);
         gbc.gridx = 1;
         formPanel.add(txtCustoFixo, gbc);
+        row++;
 
-        // Linha 3: Margem Lucro
-        gbc.gridx = 0; gbc.gridy = 3;
+
+        gbc.gridx = 0; gbc.gridy = row;
         formPanel.add(new JLabel("Margem Lucro (%):"), gbc);
         gbc.gridx = 1;
         formPanel.add(txtMargemLucro, gbc);
+        row++;
 
-        // Linha 4: Data Processamento
-        gbc.gridx = 0; gbc.gridy = 4;
+
+        gbc.gridx = 0; gbc.gridy = row;
         formPanel.add(new JLabel("Data Processamento:"), gbc);
         gbc.gridx = 1;
         formPanel.add(txtDataProcessamento, gbc);
+        row++;
 
-        // Linha 5: Botões
+
         JPanel buttonPanel = new JPanel(new FlowLayout(FlowLayout.RIGHT));
         btnNovo = new JButton("Novo");
         btnSalvar = new JButton("Salvar");
         btnExcluir = new JButton("Excluir");
 
-        btnNovo.setBackground(new Color(76, 175, 80));
-        btnNovo.setForeground(Color.WHITE);
-        btnSalvar.setBackground(new Color(33, 150, 243));
-        btnSalvar.setForeground(Color.WHITE);
-        btnExcluir.setBackground(new Color(244, 67, 54));
-        btnExcluir.setForeground(Color.WHITE);
-
         buttonPanel.add(btnNovo);
         buttonPanel.add(btnSalvar);
         buttonPanel.add(btnExcluir);
 
-        gbc.gridx = 0; gbc.gridy = 5;
+        gbc.gridx = 0; gbc.gridy = row;
         gbc.gridwidth = 2;
         formPanel.add(buttonPanel, gbc);
 
         add(formPanel, BorderLayout.SOUTH);
 
-        // ====== Ações ======
-        btnNovo.addActionListener(e -> limparFormulario());
+
+        btnNovo.addActionListener(e -> {
+            limparFormulario();
+
+            txtDataProcessamento.setValue(dateFormat.format(new java.util.Date()));
+        });
+
         btnSalvar.addActionListener(e -> salvarOuAtualizar());
         btnExcluir.addActionListener(e -> excluirSelecionado());
         table.getSelectionModel().addListSelectionListener(e -> {
@@ -151,18 +176,48 @@ public class TelaCustoCrud extends JPanel {
             }
         });
 
-        // Carrega dados ao iniciar
+
+        carregarProdutos();
         carregarCustos();
     }
 
-    // ====== Carrega todos os custos ======
+
+    private void carregarProdutos() {
+        SwingWorker<List<ProdutoResponse>, Void> worker = new SwingWorker<>() {
+            @Override
+            protected List<ProdutoResponse> doInBackground() throws Exception {
+                ProdutoResponse[] resp = restTemplate.getForObject(API_PRODUTOS, ProdutoResponse[].class);
+                return resp != null ? Arrays.asList(resp) : List.of();
+            }
+
+            @Override
+            protected void done() {
+                try {
+                    List<ProdutoResponse> produtos = get();
+                    cbProduto.removeAllItems();
+                    for (ProdutoResponse p : produtos) {
+                        cbProduto.addItem(p);
+                    }
+                } catch (Exception ex) {
+                    JOptionPane.showMessageDialog(
+                            TelaCustoCrud.this,
+                            "Erro ao carregar produtos: " + ex.getMessage(),
+                            "Erro",
+                            JOptionPane.ERROR_MESSAGE
+                    );
+                }
+            }
+        };
+        worker.execute();
+    }
+
     private void carregarCustos() {
         SwingWorker<List<CustoResponse>, Void> worker = new SwingWorker<>() {
             @Override
             protected List<CustoResponse> doInBackground() throws Exception {
                 try {
                     CustoResponse[] resp = restTemplate.getForObject(API_URL, CustoResponse[].class);
-                    return resp != null ? List.of(resp) : List.of();
+                    return resp != null ? Arrays.asList(resp) : List.of();
                 } catch (Exception ex) {
                     System.err.println("Erro ao carregar custos: " + ex.getMessage());
                     ex.printStackTrace();
@@ -178,13 +233,15 @@ public class TelaCustoCrud extends JPanel {
                     for (CustoResponse c : custos) {
                         tableModel.addRow(new Object[]{
                                 c.id(),
-                                c.imposto(),
-                                c.custoVariavel(),
-                                c.custoFixo(),
-                                c.margemLucro(),
+                                c.produtoNome(),  // ✅ NOVO: Nome do produto
+                                String.format("%.2f%%", c.imposto()),
+                                String.format("R$ %.2f", c.custoVariavel()),
+                                String.format("R$ %.2f", c.custoFixo()),
+                                String.format("%.2f%%", c.margemLucro()),
                                 c.dataProcessamento() != null ? dateFormat.format(c.dataProcessamento()) : ""
                         });
                     }
+                    System.out.println("✅ Custos carregados: " + custos.size());
                 } catch (Exception ex) {
                     System.err.println("Erro ao processar custos: " + ex.getMessage());
                     ex.printStackTrace();
@@ -200,21 +257,47 @@ public class TelaCustoCrud extends JPanel {
         worker.execute();
     }
 
-    // ====== Preenche formulário ao selecionar ======
     private void preencherFormulario() {
         int linhaSelecionada = table.getSelectedRow();
         if (linhaSelecionada >= 0) {
-            txtImposto.setText(String.valueOf(tableModel.getValueAt(linhaSelecionada, 1)));
-            txtCustoVariavel.setText(String.valueOf(tableModel.getValueAt(linhaSelecionada, 2)));
-            txtCustoFixo.setText(String.valueOf(tableModel.getValueAt(linhaSelecionada, 3)));
-            txtMargemLucro.setText(String.valueOf(tableModel.getValueAt(linhaSelecionada, 4)));
-            txtDataProcessamento.setText(String.valueOf(tableModel.getValueAt(linhaSelecionada, 5)));
+
+            String nomeProduto = String.valueOf(tableModel.getValueAt(linhaSelecionada, 1));
+            for (int i = 0; i < cbProduto.getItemCount(); i++) {
+                ProdutoResponse p = cbProduto.getItemAt(i);
+                if (p.nome().equals(nomeProduto)) {
+                    cbProduto.setSelectedIndex(i);
+                    break;
+                }
+            }
+
+
+            String impostoStr = String.valueOf(tableModel.getValueAt(linhaSelecionada, 2)).replace("%", "").trim();
+            String custoVarStr = String.valueOf(tableModel.getValueAt(linhaSelecionada, 3)).replace("R$", "").trim();
+            String custoFixoStr = String.valueOf(tableModel.getValueAt(linhaSelecionada, 4)).replace("R$", "").trim();
+            String margemStr = String.valueOf(tableModel.getValueAt(linhaSelecionada, 5)).replace("%", "").trim();
+
+            txtImposto.setText(impostoStr);
+            txtCustoVariavel.setText(custoVarStr);
+            txtCustoFixo.setText(custoFixoStr);
+            txtMargemLucro.setText(margemStr);
+            txtDataProcessamento.setText(String.valueOf(tableModel.getValueAt(linhaSelecionada, 6)));
         }
     }
 
-    // ====== Salvar ou atualizar ======
     private void salvarOuAtualizar() {
         try {
+
+            ProdutoResponse produto = (ProdutoResponse) cbProduto.getSelectedItem();
+            if (produto == null) {
+                JOptionPane.showMessageDialog(
+                        this,
+                        "Selecione um produto!",
+                        "Validação",
+                        JOptionPane.WARNING_MESSAGE
+                );
+                return;
+            }
+
             String impostoStr = txtImposto.getText().trim();
             String custoVarStr = txtCustoVariavel.getText().trim();
             String custoFixoStr = txtCustoFixo.getText().trim();
@@ -238,7 +321,16 @@ public class TelaCustoCrud extends JPanel {
             Double margemLucro = Double.parseDouble(margemStr);
             Date dataProcessamento = dateFormat.parse(dataStr);
 
-            CustoRequest req = new CustoRequest(imposto, custoVariavel, custoFixo, margemLucro, dataProcessamento);
+
+            CustoRequest req = new CustoRequest(
+                    produto.id(),
+                    imposto,
+                    custoVariavel,
+                    custoFixo,
+                    margemLucro,
+                    dataProcessamento
+            );
+
             int linhaSelecionada = table.getSelectedRow();
 
             SwingWorker<Void, Void> worker = new SwingWorker<>() {
@@ -303,7 +395,6 @@ public class TelaCustoCrud extends JPanel {
         }
     }
 
-    // ====== Excluir ======
     private void excluirSelecionado() {
         int linhaSelecionada = table.getSelectedRow();
         if (linhaSelecionada < 0) {
@@ -369,11 +460,12 @@ public class TelaCustoCrud extends JPanel {
 
     private void limparFormulario() {
         table.clearSelection();
+        cbProduto.setSelectedIndex(-1);  // ✅ Limpa combo
         txtImposto.setText("");
         txtCustoVariavel.setText("");
         txtCustoFixo.setText("");
         txtMargemLucro.setText("");
         txtDataProcessamento.setText("");
-        txtImposto.requestFocus();
+        cbProduto.requestFocus();
     }
 }
